<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="login">Войдите в аккаунт</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login_btn">Войти</string>
    <string name="create_acc">Создайте аккаунт</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="have_account">У вас уже есть аккаунт?</string>
    <string name="to_registration">Регистрация</string>
    <string name="have_no_account">У вас ещё нет аккаунта?</string>
    <string name="ideas_for_outfit">Идеи для образа \nна сегодня</string>
    <string name="random_color">Может надеть сегодня что-то\nХХХХХ цвета?</string>
    <string name="random_outfit">Случайный образ:</string>
    <string name="add_outfit">Добавить образ</string>
    <string name="search">Поиск по тегам...</string>
    <string name="back">Назад</string>
    <string name="delete">Удалить запись</string>
    <string name="tags">Теги</string>
    <string name="add_tag">Добавить тег</string>
    <string name="delete_tag">Удалить тег</string>
    <string name="save">Сохранить</string>
    <string name="new_tag">Введите новый тег</string>
    <string name="write_tag">введите тег</string>
    <string name="greeting">Рады видеть вас\nсегодня!!!\n\nПриступайте\nк выбору образа)</string>
    <string name="srch">Поиск</string>
</resources>