<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/act_bg"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/text_bg_dg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#5F6556"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/text_bg_bg"
        android:textColorHint="#433F3E"
        android:textColor="#5F6556"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="70dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/text_bg_bg"
        android:textColorHint="#433F3E"
        android:textColor="#5F6556"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textColorHint="#433F3E"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_lg"
        android:text="@string/login_btn"
        android:layout_marginHorizontal="140dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reg_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="200dp"
            android:text="@string/have_no_account"
            android:textColor="#433F3E"
            android:textSize="16sp" />

        <Button
            android:id="@+id/to_registration_btn"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="42dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_bg_lb"
            android:textStyle="bold"
            android:text="@string/to_registration" />
    </LinearLayout>
</LinearLayout>