<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#080809"
    tools:context=".HomeFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="1dp">

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Выйти"
            android:layout_marginStart="320dp"
            android:layout_marginEnd="6dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/btn_bg_db"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/idea_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textAlignment="center"
            android:textColor="#433F3E"
            android:textSize="24sp"
            android:background="@drawable/text_bg_dg"
            android:layout_marginHorizontal="42dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/ideas_for_outfit"/>

        <TextView
            android:id="@+id/random_color_text"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:textAlignment="center"
            android:textColor="#433F3E"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:background="@drawable/text_bg_dg"
            android:layout_marginHorizontal="42dp"
            android:gravity="center"
            android:text="@string/random_color" />

        <TextView
            android:id="@+id/random_outfit_text"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:textAlignment="center"
            android:textColor="#433F3E"
            android:layout_marginTop="12dp"
            android:textSize="24sp"
            android:background="@drawable/text_bg_dg"
            android:layout_marginHorizontal="42dp"
            android:gravity="center"
            android:text="@string/random_outfit"/>

        <ImageView
            android:id="@+id/random_outfit"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginHorizontal="42dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/text_bg_dg"
            android:src="@android:drawable/ic_dialog_alert" />

        <Button
            android:id="@+id/add_outfit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="90dp"
            android:background="@drawable/btn_bg_lg"
            android:text="@string/add_outfit"
            android:textSize="22sp"
            android:textColor="#000000" />

    </LinearLayout>
</FrameLayout>