<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ba"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OutfitFragment"
    android:background="#080809">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="300dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_db"
                android:text="@string/back"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/outfit_btn"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/text_bg_dg"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_dialog_alert" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/lay_bg_db"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/tags"
                android:layout_width="60dp"
                android:layout_height="22dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_bg_dg2"
                android:gravity="center"
                android:text="@string/tags"
                android:textAlignment="center"
                android:textColor="#5F6556"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tags_text"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="7dp"
                android:background="@drawable/text_bg_lb"
                android:text="тегииии"
                android:textSize="18sp"
                android:paddingHorizontal="10dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/text_bg_bg"
                android:textColorHint="#433F3E"
                android:textColor="#5F6556"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="108dp"
                android:layout_marginBottom="7dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tag_ed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/write_tag"
                    android:textColorHint="#433F3E"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:layout_marginHorizontal="8dp">

                <Button
                    android:id="@+id/add_tag_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg_lg"
                    android:text="@string/add_tag"
                    android:textSize="12sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/delete_tag_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="144dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg_lg"
                    android:text="@string/delete_tag"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/btn_bg_lg"
                android:gravity="center"
                android:text="@string/save"
                android:textAlignment="center"
                android:textSize="26sp" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>